added user auth + dashboard

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Shared
+﻿# Shared
 NODE_ENV=development
 LOG_LEVEL=info
 
@@ -6,10 +6,19 @@ LOG_LEVEL=info
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_123456789
 NEXTAUTH_SECRET=replace-me
 NEXTAUTH_URL=http://localhost:3000
+EMAIL_FROM=hello@muzo.app
+EMAIL_SERVER_HOST=smtp.example.com
+EMAIL_SERVER_PORT=587
+EMAIL_SERVER_USER=apikey
+EMAIL_SERVER_PASSWORD=change-me
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 # API/Server
-DATABASE_URL=mongodb+srv://username:password@cluster.mongodb.net/muzo
+DATABASE_URL=mongodb://localhost:27017/muzo?directConnection=true
 REDIS_URL=redis://default:password@<upstash-url>:6379
+UPSTASH_REDIS_REST_URL=https://<rest-url>
+UPSTASH_REDIS_REST_TOKEN=replace-me
 S3_ACCESS_KEY_ID=AKIA...
 S3_SECRET_ACCESS_KEY=...
 S3_BUCKET=muzo-uploads-dev
