--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,16 +1,17 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "dist",
-    "module": "NodeNext"
-  },
-  "include": [
-    "src/**/*.ts",
-    "prisma/**/*.prisma"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+    "extends":  "../../tsconfig.base.json",
+    "compilerOptions":  {
+                            "rootDir":  "src",
+                            "outDir":  "dist",
+                            "module":  "ESNext",
+                            "moduleResolution":  "Bundler"
+                        },
+    "include":  [
+                    "src/**/*.ts",
+                    "prisma/**/*.prisma"
+                ],
+    "exclude":  [
+                    "node_modules",
+                    "dist"
+                ]
 }
