--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,32 +1,39 @@
 {
-  "name": "@muzo/web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "typecheck": "tsc --project tsconfig.json --pretty"
-  },
-  "dependencies": {
-    "@muzo/db": "workspace:*",
-    "@muzo/fulfillment": "workspace:*",
-    "@muzo/queue": "workspace:*",
-    "@tanstack/react-query": "^5.29.0",
-    "next": "14.2.5",
-    "next-auth": "^5.0.0-beta.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "zod": "^3.23.8",
-    "@aws-sdk/client-s3": "^3.579.0",
-    "@aws-sdk/s3-request-presigner": "^3.579.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/react": "19.1.13",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
-  }
+    "name":  "@muzo/web",
+    "version":  "0.1.0",
+    "private":  true,
+    "scripts":  {
+                    "dev":  "next dev",
+                    "build":  "next build",
+                    "start":  "next start",
+                    "lint":  "next lint",
+                    "typecheck":  "tsc --project tsconfig.json --pretty"
+                },
+    "dependencies":  {
+                         "@auth/prisma-adapter":  "^1.0.10",
+                         "@aws-sdk/client-s3":  "^3.579.0",
+                         "@aws-sdk/s3-request-presigner":  "^3.579.0",
+                         "@muzo/db":  "workspace:*",
+                         "@muzo/fulfillment":  "workspace:*",
+                         "@muzo/queue":  "workspace:*",
+                         "@prisma/client":  "^5.22.0",
+                         "@tanstack/react-query":  "^5.29.0",
+                         "@upstash/ratelimit":  "^1.1.1",
+                         "@upstash/redis":  "^1.25.4",
+                         "next":  "14.2.5",
+                         "next-auth":  "^5.0.0-beta.3",
+                         "nodemailer":  "^6.9.11",
+                         "react":  "18.3.1",
+                         "react-dom":  "18.3.1",
+                         "zod":  "^3.23.8",
+                         "dotenv":  "^16.4.5"
+                     },
+    "devDependencies":  {
+                            "@tailwindcss/forms":  "^0.5.7",
+                            "@types/react":  "19.1.13",
+                            "autoprefixer":  "^10.4.19",
+                            "eslint-config-next":  "14.2.5",
+                            "postcss":  "^8.4.38",
+                            "tailwindcss":  "^3.4.4"
+                        }
 }
