--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -15,27 +15,17 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ],
-      "@/components/*": [
-        "components/*"
-      ],
-      "@/lib/*": [
-        "lib/*"
-      ],
-      "@muzo/db": [
-        "../../packages/db/src"
-      ],
-      "@muzo/queue": [
-        "../../packages/queue/src"
-      ],
-      "@muzo/fulfillment": [
-        "../../packages/fulfillment/src"
-      ],
-      "@muzo/ai": [
-        "../../packages/ai/src"
-      ]
+      "@/*": ["./*"],
+      "@/components/*": ["components/*"],
+      "@/lib/*": ["lib/*"],
+      "@muzo/db": ["../../packages/db/src/index.ts"],
+      "@muzo/db/*": ["../../packages/db/src/*"],
+      "@muzo/queue": ["../../packages/queue/src/index.ts"],
+      "@muzo/queue/*": ["../../packages/queue/src/*"],
+      "@muzo/fulfillment": ["../../packages/fulfillment/src/index.ts"],
+      "@muzo/fulfillment/*": ["../../packages/fulfillment/src/*"],
+      "@muzo/ai": ["../../packages/ai/src/index.ts"],
+      "@muzo/ai/*": ["../../packages/ai/src/*"]
     },
     "lib": [
       "dom",
@@ -43,8 +33,7 @@
       "esnext"
     ],
     "allowJs": true,
-    "incremental": true,
-    "module": "NodeNext"
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
@@ -54,7 +43,5 @@
     "**/*.mjs",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
