muzo huge session

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-﻿# Shared
+# Shared
 NODE_ENV=development
 LOG_LEVEL=info
 
@@ -26,6 +26,7 @@ S3_REGION=eu-west-3
 S3_ENDPOINT=https://s3.aleou.app
 S3_FORCE_PATH_STYLE=true
 RUNPOD_API_KEY=runpod-key
+OPENAI_API_KEY=sk-openai
 STRIPE_SECRET_KEY=sk_test_123456789
 STRIPE_WEBHOOK_SECRET=whsec_123456789
 PRINTFUL_API_KEY=printful-key
