--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,7 +26,8 @@
                          "react":  "18.3.1",
                          "react-dom":  "18.3.1",
                          "zod":  "^3.23.8",
-                         "dotenv":  "^16.4.5"
+                         "dotenv":  "^16.4.5",
+                         "@muzo/api":  "workspace:*"
                      },
     "devDependencies":  {
                             "@tailwindcss/forms":  "^0.5.7",
