--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -8,7 +8,10 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.579.0",
+    "@aws-sdk/s3-request-presigner": "^3.579.0",
     "axios": "^1.6.8",
+    "openai": "^6.1.0",
     "zod": "^3.23.8"
   }
 }
