--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,9 @@
       "@muzo/fulfillment": ["packages/fulfillment/src/index.ts"],
       "@muzo/fulfillment/*": ["packages/fulfillment/src/*"],
       "@muzo/ai": ["packages/ai/src/index.ts"],
-      "@muzo/ai/*": ["packages/ai/src/*"]
+      "@muzo/ai/*": ["packages/ai/src/*"],
+      "@muzo/api": ["packages/api/src/index.ts"],
+      "@muzo/api/*": ["packages/api/src/*"]
     },
     "types": ["node"]
   },
