--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,7 +14,6 @@
                          "@muzo/db":  "workspace:*",
                          "@muzo/fulfillment":  "workspace:*",
                          "@muzo/queue":  "workspace:*",
-                         "zod":  "^3.23.8",
-                         "bullmq":  "^4.15.0"
+                         "zod":  "^3.23.8"
                      }
 }
