--- a/packages/queue/package.json
+++ b/packages/queue/package.json
@@ -8,7 +8,8 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
-    "bullmq": "^4.15.0",
+    "@muzo/db": "workspace:*",
+    "@prisma/client": "^5.13.0",
     "zod": "^3.23.8"
   }
 }
