--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "globals": "^15.3.0",
     "husky": "^9.0.10",
     "prettier": "^3.2.5",
+    "tsx": "^4.7.0",
     "turbo": "^1.12.4",
     "typescript": "^5.4.5"
   }
