--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,8 +15,8 @@
                          "@aws-sdk/s3-request-presigner":  "^3.579.0",
                          "@muzo/db":  "workspace:*",
                          "@muzo/fulfillment":  "workspace:*",
-                         "@muzo/queue":  "workspace:*",
-                         "@prisma/client":  "^5.22.0",
+                        "@muzo/queue":  "workspace:*",
+                        "@prisma/client":  "^5.22.0",
                          "@tanstack/react-query":  "^5.29.0",
                          "next":  "14.2.5",
                          "next-auth":  "^5.0.0-beta.3",
@@ -25,7 +25,8 @@
                          "react-dom":  "18.3.1",
                          "zod":  "^3.23.8",
                          "dotenv":  "^16.4.5",
-                         "@muzo/api":  "workspace:*"
+                        "@muzo/api":  "workspace:*",
+                        "lucide-react":  "^0.462.0"
                      },
     "devDependencies":  {
                             "@tailwindcss/forms":  "^0.5.7",
