--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,6 +10,8 @@
                     "typecheck":  "tsc --project tsconfig.json --noEmit"
                 },
     "dependencies":  {
+                         "@aws-sdk/client-s3": "^3.0.0",
+                         "@aws-sdk/s3-request-presigner": "^3.0.0",
                          "@muzo/ai":  "workspace:*",
                          "@muzo/db":  "workspace:*",
                          "@muzo/fulfillment":  "workspace:*",
