--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,9 @@ S3_FORCE_PATH_STYLE=true
 RUNPOD_API_KEY=runpod-key
 OPENAI_API_KEY=sk-openai
 STRIPE_SECRET_KEY=sk_test_123456789
-STRIPE_WEBHOOK_SECRET=whsec_123456789
-PRINTFUL_API_KEY=printful-key
-PRINTIFY_API_KEY=printify-key
+STRIPE_PUBLISHABLE_KEY=pk_test_123456789
+# CloudPrinter is the active fulfillment provider
+CLOUDPRINTER_API_KEY=your-cloudprinter-api-key
+# Printful and Printify are disabled (providers kept in code for future use)
+# PRINTFUL_API_KEY=printful-key
+# PRINTIFY_API_TOKEN=printify-token
