--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,10 @@
       "@muzo/queue/*": ["packages/queue/src/*"],
       "@muzo/fulfillment": ["packages/fulfillment/src/index.ts"],
       "@muzo/fulfillment/*": ["packages/fulfillment/src/*"],
+      "@muzo/cloudprinter": ["packages/cloudprinter/src/index.ts"],
+      "@muzo/cloudprinter/*": ["packages/cloudprinter/src/*"],
+      "@muzo/stripe": ["packages/stripe/src/index.ts"],
+      "@muzo/stripe/*": ["packages/stripe/src/*"],
       "@muzo/ai": ["packages/ai/src/index.ts"],
       "@muzo/ai/*": ["packages/ai/src/*"],
       "@muzo/api": ["packages/api/src/index.ts"],
