--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,20 +13,21 @@
                          "@auth/prisma-adapter":  "^1.0.10",
                          "@aws-sdk/client-s3":  "^3.579.0",
                          "@aws-sdk/s3-request-presigner":  "^3.579.0",
+                         "@muzo/api":  "workspace:*",
                          "@muzo/db":  "workspace:*",
                          "@muzo/fulfillment":  "workspace:*",
-                        "@muzo/queue":  "workspace:*",
-                        "@prisma/client":  "^5.22.0",
+                         "@muzo/queue":  "workspace:*",
+                         "@muzo/stripe":  "workspace:*",
+                         "@prisma/client":  "^5.22.0",
                          "@tanstack/react-query":  "^5.29.0",
+                         "dotenv":  "^16.4.5",
+                         "lucide-react":  "^0.462.0",
                          "next":  "14.2.5",
                          "next-auth":  "^5.0.0-beta.3",
                          "nodemailer":  "^6.9.11",
                          "react":  "18.3.1",
                          "react-dom":  "18.3.1",
-                         "zod":  "^3.23.8",
-                         "dotenv":  "^16.4.5",
-                        "@muzo/api":  "workspace:*",
-                        "lucide-react":  "^0.462.0"
+                         "zod":  "^3.23.8"
                      },
     "devDependencies":  {
                             "@tailwindcss/forms":  "^0.5.7",
