--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -24,8 +24,14 @@
       "@muzo/queue/*": ["../../packages/queue/src/*"],
       "@muzo/fulfillment": ["../../packages/fulfillment/src/index.ts"],
       "@muzo/fulfillment/*": ["../../packages/fulfillment/src/*"],
+      "@muzo/cloudprinter": ["../../packages/cloudprinter/src/index.ts"],
+      "@muzo/cloudprinter/*": ["../../packages/cloudprinter/src/*"],
+      "@muzo/stripe": ["../../packages/stripe/src/index.ts"],
+      "@muzo/stripe/*": ["../../packages/stripe/src/*"],
       "@muzo/ai": ["../../packages/ai/src/index.ts"],
-      "@muzo/ai/*": ["../../packages/ai/src/*"]
+      "@muzo/ai/*": ["../../packages/ai/src/*"],
+      "@muzo/api": ["../../packages/api/src/index.ts"],
+      "@muzo/api/*": ["../../packages/api/src/*"]
     },
     "lib": [
       "dom",
