--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "@types/node": "^20.11.30",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "globals": "^15.3.0",
     "husky": "^9.0.10",
@@ -20,5 +21,8 @@
     "tsx": "^4.7.0",
     "turbo": "^1.12.4",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "mongodb": "^6.20.0"
   }
 }
