--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,77 @@
-# Shared
+# ================================
+# MUZO - Environment Variables Template
+# ================================
+# Copy this file to .env and fill in your values
+# ================================
+
+# ================================
+# 🌍 GENERAL
+# ================================
 NODE_ENV=development
 LOG_LEVEL=info
 
-# Web
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_123456789
-NEXTAUTH_SECRET=replace-me
+# ================================
+# 🗄️ DATABASE (REQUIRED)
+# ================================
+# Choose ONE of these configurations:
+#
+# Option A - Direct Connection (no replica set, no transactions)
+DATABASE_URL=mongodb://localhost:27017/muzo?directConnection=true&retryWrites=false&serverSelectionTimeoutMS=30000
+#
+# Option B - Replica Set (with transactions, recommended for production)
+# DATABASE_URL=mongodb://user:password@host:port/database?replicaSet=rs0&retryWrites=true&tls=true&serverSelectionTimeoutMS=30000
+
+# ================================
+# 🔴 REDIS (REQUIRED)
+# ================================
+REDIS_URL=redis://localhost:6379
+UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
+UPSTASH_REDIS_REST_TOKEN=your-token
+
+# ================================
+# 🪣 S3 / Object Storage (REQUIRED)
+# ================================
+S3_ENDPOINT=https://s3.your-region.amazonaws.com
+S3_ACCESS_KEY_ID=AKIA...
+S3_SECRET_ACCESS_KEY=...
+S3_BUCKET=muzo-uploads-dev
+S3_REGION=us-east-1
+S3_FORCE_PATH_STYLE=true
+
+# ================================
+# 🔐 AUTHENTICATION
+# ================================
+NEXTAUTH_SECRET=replace-me-with-random-string
 NEXTAUTH_URL=http://localhost:3000
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 EMAIL_FROM=hello@muzo.app
 EMAIL_SERVER_HOST=smtp.example.com
 EMAIL_SERVER_PORT=587
 EMAIL_SERVER_USER=apikey
 EMAIL_SERVER_PASSWORD=change-me
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
 
-# API/Server
-DATABASE_URL=mongodb://localhost:27017/muzo?directConnection=true
-S3_ACCESS_KEY_ID=AKIA...
-S3_SECRET_ACCESS_KEY=...
-S3_BUCKET=muzo-uploads-dev
-S3_REGION=eu-west-3
-S3_ENDPOINT=https://s3.aleou.app
-S3_FORCE_PATH_STYLE=true
-RUNPOD_API_KEY=runpod-key
-OPENAI_API_KEY=sk-openai
+# ================================
+# 💳 STRIPE (REQUIRED)
+# ================================
 STRIPE_SECRET_KEY=sk_test_123456789
 STRIPE_PUBLISHABLE_KEY=pk_test_123456789
-# CloudPrinter is the active fulfillment provider
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_123456789
+
+# ================================
+# 🤖 AI Services (REQUIRED)
+# ================================
+RUNPOD_API_KEY=your-runpod-key
+OPENAI_API_KEY=sk-your-openai-key
+
+# ================================
+# 📦 FULFILLMENT
+# ================================
 CLOUDPRINTER_API_KEY=your-cloudprinter-api-key
-# Printful and Printify are disabled (providers kept in code for future use)
-# PRINTFUL_API_KEY=printful-key
-# PRINTIFY_API_TOKEN=printify-token
+
+# ================================
+# ⚙️ WORKER Configuration (Optional)
+# ================================
+# WORKER_QUEUES=generation,mockup,fulfillment
+# QUEUE_TRANSACTIONS=off
+
